@@ -1,3 +1,4 @@
+- add sorting for encrypted items
 - fully working encryption streaming playback including on MAC/iOS
 - crypto support
 v0.1.3 (2017-11-24)
